fix colour for title on mobile

--- a/less/widget-slideshow.less
+++ b/less/widget-slideshow.less
@@ -107,7 +107,6 @@
         }
         @media @mobile {
             padding: 5px 10px;
-            color: @color-swatch4;
             font-size: bkscale(@font-swatch8-font-size,0.5);
             line-height: bkscale(@font-swatch8-line-height,0.5);
             background-color: @color__slideshow-caption--background;
